@@ -1,3 +1,10 @@
+2008-08-22 Harri Pitkänen <hatapitk@iki.fi>
+
+	* Modify some grammar error checks to affect 2 instead of
+	  1 character so that they become slightly easier to see.
+	* Add option explanation_language=... to voikkogc for printing
+	  human readable error explanations.
+
 2008-08-13 Harri Pitkänen <hatapitk@iki.fi>
 
 	* Add check for missing punctuation at the end of sentence.
